--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio" />
 	<meta name="keywords" content="portfolio resume" />
-	<meta name="author" content="Sedky A" />
+	<meta name="author" content="Alwin Philip" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
@@ -84,15 +84,14 @@
 				<!-- Navbar Footer -->
 				<div class="colorlib-footer">
 					<ul>
-						<li><a href="https://www.linkedin.com/in/sedky" target="_blank" title="LinkedIn"><i
+						<li><a href="https://www.linkedin.com/in/alwin-philip-student" target="_blank" title="LinkedIn"><i
 									class="icon-social-linkedin"></i></a></li>
-						<li><a href="https://github.com/sedkis" target="_blank" title="GitHub"><i
+						<li><a href="https://github.com/Alwinphilip0105" target="_blank" title="GitHub"><i
 									class="icon-social-github"></i></a>
 						</li>
-						<li><a href="mailto:sedky.ab@gmail.com" title="Email"><i class="icon-mail"></i></a>
+						<li><a href="mailto:alwinphilip0105@gmail.com" title="Email"><i class="icon-mail"></i></a>
 						</li>
-						<li><a href="https://www.youtube.com/channel/UCXR-k7wwwhdovpXXkRitJ_g" title="youtube"><i class="icon-youtube"></i></a>
-						</li>
+						
 					</ul>
 				</div>
 			</aside>
@@ -131,14 +130,14 @@
 										<div class="about-desc">
 											<span class="heading-meta">About</span>
 											<h2 class="colorlib-heading">Who Am I?</h2>
-											<p><strong>Hi I'm Sedky,</strong>
+											<p><strong>Hi I'm Alwin,</strong>
 												a technical enthusiast, and solutions architect at <a href="https://tyk.io">Tyk</a>, the best APIM platform in the world!
 												<br><br>
 												- I love to <a href="https://www.youtube.com/channel/UCXR-k7wwwhdovpXXkRitJ_g">learn and teach,</a> especially when it comes to my passion, software.
 												<br><br>
 												- I love to talk about infrastructure, containerization, programming, and everything Serverless / Cloud.
 												<br><br>
-												- I love to build things.  For <a href="https://github.com/sedkis">myself and the community.</a> 
+												- I love to build things.  For <a href="https://github.com/Alwinphilip0105">myself and the community.</a> 
 											</p>
 										</div>
 									</div>
@@ -492,7 +491,7 @@
 												<h4 class="panel-title">
 													<a data-toggle="collapse" data-parent="#accordion"
 														href="#collapseOne" aria-expanded="true"
-														aria-controls="collapseOne">Bachelor of Computer Science (BsCs)
+														aria-controls="collapseOne">Bachelor of Technology (B.Tech)
 													</a>
 												</h4>
 											</div>
@@ -503,16 +502,17 @@
 														<div class="colorlib-feature edu-feature colorlib-feature-sm">
 															<div class="colorlib-icon">
 																<img src="images/western_1.gif" class="img-responsive"
-																	alt="Western University">
+																	alt="Amity
+																		University,Noida">
 															</div>
 															<div class="colorlib-text edu-feature__desc">
-																<a href="https://www.uwo.ca/" target="_blank"><b>Western
-																		University</b></a>
+																<a href="hhttps://www.amity.edu" target="_blank"><b>Amity
+																		University,Noida</b></a>
 																<span class="heading-meta">09/2011 - 06/2015</span>
-																<b>Bachelor of Computer Science (BsCs)</b>
+																<b>Bachelor of Technology (B.Tech)</b>
 																<ul>
 																	<li>
-																		Major in Computer Science
+																		Major in Information Technology
 																	</li>
 																</ul>
 															</div>
