--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
 					<div class="author-img" style="background-image: url(images/sedky-mugshot2.png);"></div>
-					<h1 id="colorlib-logo"><a href="index.html">Sedky</a></h1>
+					<h1 id="colorlib-logo"><a href="index.html">Alwin</a></h1>
 					<span class="position"><a href="#"><b>Tech Enthusiast</b></a></span>
 				</div>
 				<!-- Navbar Items -->
@@ -168,7 +168,7 @@
 											<h2>Interested in what I am currently working on? Feel free to visit my
 												GitHub!
 											</h2>
-											<a href="https://github.com/sedkis" target="_blank" class="btn-hire">View <i
+											<a href="https://github.com/Alwinphilip0105" target="_blank" class="btn-hire">View <i
 													class="icon-github"></i></a>
 										</div>
 									</div>
@@ -730,7 +730,7 @@
 							<div class="col-md-5" style="display: flex;">
 								<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 									<div class="colorlib-icon">
-										<a href="mailto:sedky.ab@gmail.com" target="blank"><i class="icon-mail"></i></a>
+										<a href="mailto:alwinphilip0105@gmail.com" target="blank"><i class="icon-mail"></i></a>
 									</div>
 									<div class="colorlib-text">
 										<p></p>
@@ -739,7 +739,7 @@
 
 								<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 									<div class="colorlib-icon">
-										<a href="https://github.com/sedkis" target="blank"><i class="icon-github"></i></a>
+										<a href="https://github.com/Alwinphilip0105" target="blank"><i class="icon-github"></i></a>
 									</div>
 									<div class="colorlib-text">
 										<p> </p>
@@ -748,7 +748,7 @@
 
 								<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 									<div class="colorlib-icon">
-										<a href="https://www.linkedin.com/in/sedky/" target="blank"><i class="icon-linkedin2"></i></a>
+										<a href="https://www.linkedin.com/in/alwin-philip-student/" target="blank"><i class="icon-linkedin2"></i></a>
 									</div>
 								</div>
 								<br>
