--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<!-- Left navbar -->
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
-					<div class="author-img" style="background-image: url(D:\MyDocs\my-passport-photo.jpeg);"></div>
+					<div class="author-img" style="background-image: url(https://drive.google.com/file/d/1DXEhovcccGM9Nd9RRkkLV2tNw5SkM6vH/view?usp=sharing);"></div>
 					<h1 id="colorlib-logo"><a href="index.html">Alwin</a></h1>
 					<span class="position"><a href="#"><b>Tech Enthusiast</b></a></span>
 				</div>
@@ -283,9 +283,8 @@
 													<div class="row">
 														<div class="colorlib-feature edu-feature colorlib-feature-sm">
 															<div class="colorlib-icon">
-																<img src="images/western_1.gif" class="img-responsive"
-																	alt="Amity
-																		University,Noida">
+																<img src="https://drive.google.com/file/d/1KQ_X9hK1ypyJ9hQ97TGca6TQ_HaiJAXV/view?usp=sharing" class="img-responsive"
+																	alt="Amity University,Noida">
 															</div>
 															<div class="colorlib-text edu-feature__desc">
 																<a href="https://www.amity.edu" target="_blank"><b>Amity
