--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 											<div class="slider-text-inner js-fullheight">
 												<div class="desc">
 													<h1>Hi! <br>I'm Alwin .</h1>
-													<h2>I am a <b></b></h2>
+													<h2> <b>A technical enthusiast,a programmer ,web developer & a B.Tech Information Technology (3rd yr) student at  Amity University, noida .</b></h2>
 
 												</div>
 											</div>
